# backend

./: .gitignore  Dockerfile  README.md  checkstyle.xml  docker-compose.yaml  enderecos_extraidos.csv  pom.xml  urls_coletadas.txt
.github/workflows/: workflow.yml
src/main/java/com/mewebstudio/javaspringbootboilerplate/config/: WebSecurityConfig.java
src/main/java/com/mewebstudio/javaspringbootboilerplate/controller/: AccountController.java  AnuncioController.java  ChatController.java  ComentarioController.java  EnumController.java  UsersController.java
src/main/java/com/mewebstudio/javaspringbootboilerplate/entity/: Anuncio.java  Caracteristica.java  ChatMessage.java  Comentario.java  Estado.java  Foto.java  Imovel.java  InteressesUsuario.java  JwtToken.java  MessageStatus.java  PrivacidadePerfil.java  TagImovel.java  TipoImovel.java  TipoUsuario.java  User.java
src/main/java/com/mewebstudio/javaspringbootboilerplate/exception/: AppExceptionHandler.java  ForbiddenException.java
src/main/resources/: application-dev.yml  application.yml
src/main/resources/db/changelog/migrations/: 003-add-vagas-column-to-imovel-table.xml  004-update-null-vagas-in-imovel.xml  005-add-comentario-and-vistos-recentemente.xml  006-add-lat-lon-to-imovel-table.xml  007-update-null-privacidade-perfil-to-publico  008-create-chat-message-table.xml  009-add-status-column-to-chat-messages.xml
src/main/resources/locales/: messages.properties  messages_en.properties
src/scrapper/: address_scrapper.py  coletor_url.py  pyproject.toml
(+41 files in other folders)
